--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
   "scripts": {
     "dev": "nodemon src/index.ts",
     "build": "tsc",
-    "start": "node dist/index.js"
+    "start": "node dist/index.js",
+    "prisma:generate": "prisma generate"
   },
   "dependencies": {
     "@faker-js/faker": "^7.6.0",
+    "@prisma/client": "^4.12.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.17.1"
@@ -29,6 +31,7 @@
     "@types/express": "^4.17.11",
     "@types/node": "^14.14.22",
     "nodemon": "^2.0.7",
+    "prisma": "^4.12.0",
     "ts-node": "^10.9.1",
     "typescript": "^4.1.3"
   }
